--- a/chapter4.tex
+++ b/chapter4.tex
@@ -527,11 +527,53 @@ We have
 \end{align}
 The first identity
 \begin{align}
-A\times (B\times C)= B(A.  C)-C(A.B)
+A\times (B\times C)= B(A.  C)-C(A.B)\\
+\Leftrightarrow\spatie \in_{npm}\in_{mrs}A_p B_r C_s = A_p\left(B_n C_p-C_n B_p\right)
+\end{align}
+Indeed,
+\begin{align}
+(B\times C)_m &= \in_{mrs}B_rC_s\\
+\Rightarrow\spatie \left(A\times (B\times C)\right)_n &=\in_{npm}A_p \in_{mrs}B_rC_s\\
+&=-\in_{mpn}\in_{mrs}A_p \in_{mrs}B_r C_s\\
+&= -\delta_{pr}\delta_{ns}A_pB_rC_s+\delta_{ps}\delta_{nr}A_pB_rC_s\\
+&= A_pB_nC_p-A_pB_pC_n\\
+\Leftrightarrow\spatie & B(A.  C)-C(A.B)
 \end{align}
 The second identity
 \begin{align}
-\nabla \times (\nabla \times V)= \nabla (\nabla .  V )-\nabla^2V
+\nabla \times (\nabla \times V)&= \nabla (\nabla .  V )-\nabla^2V\\
+\Leftrightarrow \spatie \in_{nrm}\in_{mpq}V_{q,pr} &= V_{p,pn}- V_{n,pp}
 \end{align}
+Indeed,
+\begin{align}
+\left(\nabla \times V\right)_m &= \in_{mpq}V_{q,p}\\
+\Rightarrow\spatie \left(\nabla  \times (\nabla \times V)\right)_n &=\in_{nrm}\left(\in_{mpq}V_{q,p}\right)_{,r}\\
+ &=\in_{nrm}\in_{mpq}V_{q,pr}\\
+ &=\delta_{rq}\delta_{np}V_{q,pr}-\delta_{pr}\delta_{nq}V_{q,pr}\\
+ &= V_{p,pn}-V_{n,pp}
+\end{align}
+We have also
+\begin{align}
+\left(\nabla V\right) &= V_{p,p}\\
+\Rightarrow\spatie \left(\nabla (\nabla .  V )\right)_n &= \left(V_{p,p}\right)_n\\
+&= V_{p,pn}
+\end{align}
+and 
+\begin{align}
+\nabla^2 V_n  & \equiv  V_{n,pp} \\
+\Rightarrow\spatie \left(\nabla (\nabla .  V )\right)_n- \nabla^2 V_n &= V_{p,pn}- V_{n,pp}
+\end{align}
+which corresponds to (15).
+So the tensor expression in Cartesian tensor form can be written as 
+$$\in_{nrm}\in_{mpq}V_{q,pr} = V_{p,pn}- V_{n,pp}$$
+
+$$\blacklozenge$$
+\newpage
+
+\section{p139 - Exercise 1.}
+\begin{tcolorbox}
+
+\end{tcolorbox}
+
 $$\blacklozenge$$
 \newpage
